--- a/tienda_libros/src/main/webapp/WEB-INF/web.xml
+++ b/tienda_libros/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,7 @@
 		<welcome-file>index.jsp</welcome-file>
 		<welcome-file>orderpra.jsp</welcome-file>
 		<welcome-file>checkoutpra.jsp</welcome-file>
+		<welcome-file>shopping</welcome-file>
 		<welcome-file>admin.jsp</welcome-file>
 		<welcome-file>cliente.jsp</welcome-file>
 		<welcome-file>index.htm</welcome-file>
